--- a/product-manager.html
+++ b/product-manager.html
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -188,13 +188,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rocketsofawesome.recruiterbox.com/jobs/fk0317d/'>
+<h5><a href='https://rocketsofawesome.recruiterbox.com/jobs/fk0317d/'>
     Associate Product Manager at Rockets of Awesome
 </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voltacharging/64ff8ea2-26a5-4905-80ea-f55762b1daf5'>Volta Charging - Technical Product Manager (Software)</a></h5> 
+<h5><a href='https://jobs.lever.co/voltacharging/64ff8ea2-26a5-4905-80ea-f55762b1daf5'>Volta Charging - Technical Product Manager (Software)</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -296,7 +296,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -369,7 +369,7 @@ roadmap that heavily leverages Salesforce.com, customer data, and integrations
 <p>15. Juli 2019 ... faveo GmbH has a job opening for Junior Product Manager (m/w/d) in Essen (
 published: 06.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... unsupervised machine learning to detect fraudulent activity for financial. 
 transactions, mobile user acquisition, social networks, commerce and money.</p>
@@ -437,7 +437,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/oJpqafws'>LinkedIn Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/oJpqafws'>LinkedIn Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
